DS-1782 java 11 changes
Signed-off-by: VladyslavHnes <vladyslav.hnes@gmail.com>